feat: replace Keycloak admin client with Spring HTTP interface (APPPOCTOOL-93 D1)
Drop the RESTEasy/ServiceLoader-based keycloak-admin-client from folio-security
(hostile to GraalVM native-image) in favour of a Spring HTTP Interface client.

- New KeycloakAdminClient (@HttpExchange) covering the 14 admin operations, reusing
  the org.keycloak.representations.* POJOs as request/response bodies.
- New KeycloakAdminTokenProvider: acquires/caches the admin token from the master
  realm token endpoint (replaces the admin client's internal token lifecycle),
  injected via a RestClient bearer interceptor.
- Rewrite KeycloakImportService onto the new client; KeycloakModuleDescriptorMapper
  and KeycloakMappings are unchanged (same representation graph).
- Delete ClientBuildUtils (+ its test); folio-security is now keycloak-admin-client-free.
- Depend on keycloak-client-common-synced for representations + JWT/JWK token types
  (Keycloak 26 no longer publishes keycloak-core); remove resteasy-multipart-provider.
- KeycloakImportServiceIT rewritten to verify via the new REST client (real Keycloak).

keycloak-admin-client is retained only for test infrastructure (folio-backend-testing).
Project version set to 4.1.0-NATIVE to isolate the PoC artifacts in the local repo.